# opengl-cube

./: .gitignore  BuildUNIX.sh  CMakeLists.txt
src/: main.c
