CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
PROJECT(opengl-cube VERSION 0.0.0 LANGUAGES C)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
ADD_COMPILE_DEFINITIONS(PROJECT_VERSION="${PROJECT_VERSION}")

FIND_PACKAGE(raylib REQUIRED)

FILE(GLOB SRC ${CMAKE_SOURCE_DIR}/src/*)

ADD_EXECUTABLE(opengl-cube ${SRC})
TARGET_LINK_LIBRARIES(opengl-cube raylib)
